--- a/perfil/templates/unidade/update_grupo_admin.html
+++ b/perfil/templates/unidade/update_grupo_admin.html
@@ -5,6 +5,7 @@
 
 {% block conteudo %}
 
+<input type="text" name="unidade" id="unidade" class="form-control" value="{{ unidade.id }}" hidden>
 <form method="POST" enctype="multipart/form-data" action="{% url 'perfil:update_grupo_admin' unidade.id %}">
         {% csrf_token %}
             <a href="#" id="adicionar-grupo"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
@@ -16,8 +17,8 @@
                   <thead class="thead-dark">
                     <tr>
                       <th scope="col" style="width: 20%; text-align : left;">Grupo</th>
-                      <th scope="col" style="width: 25%; text-align : left;">Funcionário</th>
-                      <th scope="col" style="width: 8%; text-align : left;"></th>
+                      <th scope="col" style="width: 15%; text-align : left;">Funcionário</th>
+                      <th scope="col" style="width: 18%; text-align : left;"></th>
                     </tr>
                   </thead>
                   <tbody>   
@@ -35,7 +36,8 @@
                       </td>
                       <td style="text-align : left;">
                         </form>
-                        <button class="btn btn-success pr-5 pl-5 w-100">Adicionar</button>
+                        <button class="btn btn-success pr-5 pl-5 ">Adicionar</button>
+                        <button class="btn btn-danger pr-5 pl-5">Remover</button>
                       </td>
                     </tr>
                   </tbody>
@@ -44,19 +46,20 @@
                  <table class="table table-striped table-responsive border rounded bg-light shadow">
                   <thead class="thead-dark">
                     <tr>
-                      <th scope="col" style="width: 19%; text-align : left;">RE</th>
-                      <th scope="col" style="width: 29%; text-align : left;">Funcionário</th>
-                      <th scope="col" style="width: 8%; text-align : left;">Opções</th>
+                      <th scope="col" style="width: 20%; text-align : left;">RE</th>
+                      <th scope="col" style="width: 30%; text-align : left;">Funcionário</th>
+                      <th scope="col" style="width: 1%; text-align : left;"></th>
                     </tr>
                   </thead>
                   <tbody id="grupo_table_body">   
                     <tr id="grupo_estatico">
-                      <td style="text-align : left;">Sem informações</td>
-                      <td scope="row" style="text-align : left;">Sem informações</td>
-                      <td><a style="color: red;" href="#">Remover</a></td>
+                      <td style="text-align : left;">&nbsp;</td>
+                      <td scope="row" style="text-align : left;">&nbsp;</td>
+                      <td></td>
                     </tr>
                   </tbody>
                 </table>
           </div>
           </div>
+
 {% endblock %}
