--- a/perfil/templates/unidade/update_categoria_admin.html
+++ b/perfil/templates/unidade/update_categoria_admin.html
@@ -4,5 +4,80 @@
 {% block titulo %} Alteração de Categoria {% endblock %}
 
 {% block conteudo %}
-<h1> Alteração de Categoria </h1>
+<div class="col-md-12 mt-3">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:update_unidade_admin' unidade.id %}">
+{% csrf_token %}
+            <a href="#" id="adicionar-categoria"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
+            <label>Categoria (Define categoria para pessoas):</label>
+        
+            <div id="mostrar-categoria" class="col-md-12">
+              <div class="row p-2">
+                <table class="table table-striped table-responsive border rounded bg-light shadow">
+                  <thead class="thead-dark">
+                    <tr>
+                      <th scope="col" style="width: 15%; text-align : left;">Sub-Categoria</th>
+                      <th scope="col" style="width: 12%; text-align : left;">Funcionário</th>
+                      <th scope="col" style="width: 10%; text-align : left;"></th>
+                    </tr>
+                  </thead>
+                  <tbody>   
+                    <tr>
+                      <td scope="row" style="text-align : left;">
+                        <select name="subcategoria" class="select form-control form-control" id="subcategoria">
+                          <option value="" selected disabled>Selecione a Subcategoria</option>
+                         {% for subcategoria in subcategoria %}
+                          <option name="subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
+                          {% endfor %}
+                        </select>
+                      </td>
+                      <td style="text-align : left;">
+                        <input class="form-control mr-sm-2" type="text"
+                        placeholder="Digite o RE do Funcionário" name="funcionario" id="funcionario">
+                      </td>
+                      <td style="text-align : left;">
+</form>
+                        <button class="btn btn-success w-100" type="submit">Adicionar</button>
+                      </td>
+                    </tr>
+                    <!-- Removendo ... -->
+                    <tr>
+                      <td scope="row" style="text-align : left;">
+                        <select name="subcategoria" class="select form-control form-control" id="subcategoria">
+                          <option value="" selected disabled>Selecione a Subcategoria</option>
+                         {% for subcategoria in subcategoria %}
+                          <option name="subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
+                          {% endfor %}
+                        </select>
+                      </td>
+                      <td style="text-align : left;">
+                        <input class="form-control mr-sm-2" type="text"
+                        placeholder="Digite o RE do Funcionário" name="funcionario" id="funcionario">
+                      </td>
+                      <td style="text-align : left;">
+</form>
+                        <button class="btn btn-danger w-100" type="submit">Remover</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+        
+                  <table class="table table-striped table-responsive border rounded bg-light shadow mt-4">
+                    <thead class="thead-dark">
+                      <tr>
+                        <th style="width: 7%;">RE</th>
+                        <th style="width: 10%;">Funcionário</th>
+                        <th style="width: 7%;">Responsabilidade</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                    {% for responsive in unidade.responsaveis_categoria.all %}
+                      <tr>
+                        <td >{{ responsive.responsavel.re_funcionario }}</td>
+                        <td >{{ responsive.responsavel.nome }}</td>
+                        <td >{{ responsive.subcategoria }}</td>     
+                      </tr>
+                    {% endfor %}
+                    </tbody>
+                  </table>
+                </div> 
 {% endblock %}
