--- a/perfil/templates/unidade/update_categoria_admin.html
+++ b/perfil/templates/unidade/update_categoria_admin.html
@@ -9,7 +9,6 @@
 {% csrf_token %}
             <a href="#" id="adicionar-categoria"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
             <label>Categoria (Define categoria para pessoas):</label>
-        
             <div id="mostrar-categoria" class="col-md-12">
               <div class="row p-2">
                 <table class="table table-striped table-responsive border rounded bg-light shadow">
@@ -32,7 +31,7 @@
                       </td>
                       <td style="text-align : left;">
                         <input class="form-control mr-sm-2" type="text"
-                        placeholder="Digite o RE do Funcionário" name="responsavel" id="funcionario">
+                        placeholder="Digite o RE do Funcionário" name="responsavel" value="{{ responsavel.id }}" id="funcionario">
                       </td>
                       <td style="text-align : left;">
 </form>
