--- a/perfil/templates/unidade/update_categoria_admin.html
+++ b/perfil/templates/unidade/update_categoria_admin.html
@@ -5,30 +5,24 @@
 
 {% block conteudo %}
 <div class="col-md-12 mt-3">
-<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:add_responsavel_categoria' unidade.id %}">
-{% csrf_token %}
-{{ form }}
-            <a href="#" id="adicionar-categoria"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
-            <label>Categoria (Define categoria para pessoas):</label>
-            <div id="mostrar-categoria" class="col-md-12">
-              <div class="row p-2">
-                <table class="table table-striped table-responsive border rounded bg-light shadow">
-                  <thead class="thead-dark">
-                    <tr>
-                      <th scope="col" style="width: 15%; text-align : left;">Sub-Categoria</th>
-                      <th scope="col" style="width: 12%; text-align : left;">Funcionário</th>
-                      <th scope="col" style="width: 10%; text-align : left;"></th>
-                    </tr>
-                  </thead>
-                  <tbody>   
-                    <tr>
-<<<<<<< HEAD
+  <a href="#" id="adicionar-categoria"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
+  <label>Categoria (Define categoria para pessoas):</label>
+  <div id="mostrar-categoria" class="col-md-12">
+    <div class="row p-2">
+      <table class="table table-striped table-responsive border rounded bg-light shadow">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col" style="width: 15%; text-align : left;">Sub-Categoria</th>
+            <th scope="col" style="width: 12%; text-align : left;">Funcionário</th>
+            <th scope="col" style="width: 10%; text-align : left;"></th>
+          </tr>
+        </thead>
+        <tbody>   
+          <tr>
+            <form method="POST" enctype="multipart/form-data" action="{% url 'perfil:add_responsavel_categoria' unidade.id %}">
+            {% csrf_token %}
                       <td scope="row" style="text-align : left;">
                         <select name="subcategoria" class="select form-control form-control" id="subcategoria" required>
-=======
-                      {% comment %} <td scope="row" style="text-align : left;">
-                        <select name="subcategoria" class="select form-control form-control" id="subcategoria">
->>>>>>> 54815da3533a88e8ea6c2f94115ef82719110463
                           <option value="" selected disabled>Selecione a Subcategoria</option>
                          {% for subcategoria in subcategoria %}
                           <option name="subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
@@ -38,30 +32,31 @@
                       <td style="text-align : left;">
                         <input class="form-control mr-sm-2" type="text"
                         placeholder="Digite o RE do Funcionário" name="responsavel" value="{{ responsavel.id }}" id="funcionario">
-                      </td>  {% endcomment %}
+                      </td> 
                       <td style="text-align : left;">
-</form>
                         <button class="btn btn-success w-100" type="submit">Adicionar</button>
+                      </form>
                       </td>
                     </tr>
                     <!-- Removendo ... -->
-<form method="POST" enctype="multipart/form-data" action="#">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:remove_responsavel_categoria' responsavel.id">
                     <tr>
                       <td scope="row" style="text-align : left;">
-                        <select name="subcategoria" class="select form-control form-control" id="subcategoria">
+                        <select name="remove_subcategoria" class="select form-control form-control" id="subcategoria">
                           <option value="" selected disabled>Selecione a Subcategoria</option>
                          {% for subcategoria in subcategoria %}
-                          <option name="subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
+                          <option name="remove_subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
                           {% endfor %}
                         </select>
                       </td>
                       <td style="text-align : left;">
                         <input class="form-control mr-sm-2" type="text"
-                        placeholder="Digite o RE do Funcionário" name="responsavel" id="funcionario">
+                        placeholder="Digite o RE do Funcionário" name="remove_responsavel" id="funcionario">
                       </td>
                       <td style="text-align : left;">
-</form>
                         <button class="btn btn-danger w-100" type="submit">Remover</button>
+                      </form>                   
+                        <!-- <a href="#" class="btn btn-danger w-100" style="color: white">Remover</a> -->
                       </td>
                     </tr>
                   </tbody>
@@ -70,9 +65,9 @@
                   <table class="table table-striped table-responsive border rounded bg-light shadow mt-4">
                     <thead class="thead-dark">
                       <tr>
-                        <th style="width: 7%;">RE</th>
-                        <th style="width: 10%;">Funcionário</th>
-                        <th style="width: 7%;">Responsabilidade</th>
+                        <th style="width: 3%;">RE</th>
+                        <th style="width: 15%;">Funcionário</th>
+                        <th style="width: 15%;">Responsabilidade</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -80,7 +75,7 @@
                       <tr>
                         <td >{{ responsive.responsavel.re_funcionario }}</td>
                         <td >{{ responsive.responsavel.nome }}</td>
-                        <td >{{ responsive.subcategoria }}</td>     
+                        <td >{{ responsive.subcategoria }}</td>   
                       </tr>
                     {% endfor %}
                     </tbody>
