Sincronizando parte de categoria

--- a/perfil/templates/unidade/update_categoria_admin.html
+++ b/perfil/templates/unidade/update_categoria_admin.html
@@ -45,7 +45,7 @@
                         <select name="remove_subcategoria" class="select form-control form-control" id="subcategoria">
                           <option value="" selected disabled>Selecione a Subcategoria</option>
                          {% for subcategoria in subcategoria %}
-                          <option name="remove_subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
+                          <option name="remover_subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
                           {% endfor %}
                         </select>
                       </td>
