Finish the task about the development in 23/10/2020

--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -36,7 +36,7 @@
   <button type="reset"  class="btn btn-warning float-right ml-2 w-25" value="Reset">Limpar</button>
 
   <button type="submit" class="btn btn-success float-right w-25">Entrar</button>
-  <a href="#" type="button" class="btn btn-info">Esqueci minha senha</a>  <!-- url 'perfil:verifica_admissao'--> 
+  <a href="{% url 'perfil:verifica_admissao' %}" type="button" class="btn btn-info">Esqueci minha senha</a>  <!-- url 'perfil:verifica_admissao'--> 
 
  </div>
  </div>
