--- a/perfil/templates/unidade/update_grupo_admin.html
+++ b/perfil/templates/unidade/update_grupo_admin.html
@@ -40,7 +40,7 @@
                       </td>
                     </tr>
                     </form>
-
+                    
                   <!-- Remover Grupo ... -->
                   <form method="POST" enctype="multipart/form-data"
                    action="{% url 'perfil:delete_user_group' unidade.id %}">
@@ -85,6 +85,9 @@
                     </tr>
                   </tbody>
                 </table>
+                <div class="col-md-12">
+                  <a href="{% url 'perfil:update_unidade_admin' unidade.id %}" class="btn btn-warning pr-5 pl-5 w-100">Voltar</a>
+                </div>
           </div>
           </div>
 
