--- a/perfil/templates/unidade/update_menu_admin.html
+++ b/perfil/templates/unidade/update_menu_admin.html
@@ -19,7 +19,7 @@
             </div>
             <div class="col-md-12 mt-4">
               <button type="submit" class="btn btn-success w-25">Salvar menus</button>
-              <a href="{% url 'perfil:unidade_admin' %}" class="btn btn-warning pr-5 pl-5 ">Voltar</a>
+              <a href="{% url 'perfil:update_unidade_admin' unidade.id %}" class="btn btn-warning pr-5 pl-5 ">Voltar</a>
 </form>
         </div>
         </div>
