--- a/perfil/templates/perfil/verifica_senha.html
+++ b/perfil/templates/perfil/verifica_senha.html
@@ -11,13 +11,13 @@
 <form action="{% url 'perfil:verifica_admissao' %}" method="POST">
   {% csrf_token %}
 <div class="row">
-  <div class="col-md-8 offset-md-2">
+  <div class="col-md-12">
     <h3>Restaurar sua Senha </h3>
       <hr>
   </div>
 
   <div id="tela-verificacao" class="row">
-  <div class="form-group col-md-8 offset-md-2">
+  <div class="form-group col-md-10 offset-md-2">
   
     <label for="unidade">Selecione sua Unidade :</label>
     <select id="unidade" name="unidade" class="select form-control form-control">
@@ -28,22 +28,22 @@
     </select>
   </div>
 
-  <div class="form-group col-md-8 offset-md-2">
+  <div class="form-group col-md-10 offset-md-2">
     <label for="re_funcionario"> Digite seu número de registro : </label>
       <input type="text" id="funcionario-login-reset" name="re_funcionario" class="form-control">
   </div>
 
-  <div class="form-group col-md-8 offset-md-2">
-    <label> Login : </label>
-    <input type="text" id="username" name="id_username" class="form-control">
+
+  <div class="form-group col-md-10 offset-md-2">
+    <input type="text" id="username" name="id_username" class="form-control" hidden>
   </div>
 
-  <div class="form-group col-md-8 offset-md-2">
+  <div class="form-group col-md-10 offset-md-2">
     <label for="admissao"> Qual a data de sua admissão : </label>
     <input type="text" id="admissao" name="admissao" class="form-control" data-mask="00/00/0000" placeholder="DD/MM/AAAA">
   </div>
 
-  <div class="form-group col-md-8 offset-md-2">
+  <div class="form-group col-md-10 offset-md-2">
     <a href="{% url 'chamados:enviar' %}" class="btn btn-warning ml-3 float-right w-25" role="button">Voltar</a>
     <button type="submit" class="btn btn-success ml-3 float-right w-25">Enviar</button>
   </div>
